# hms

./: .env.example  .gitignore  AGENTS.md  AI-CONTEXT.md  Dockerfile  README.md  build.gradle  convert_to_mustache.js  docker-compose.yml  package-lock.json  package.json  run-dev.ps1  run-prod.ps1
.ai/: AI-CONTEXT.md  GEMINI-TERMINAL-rule.md  memory.md
.claude/: settings.local.json
.gemini/: GEMINI-rule.md
.people/: rule-repository.md
doc/: AI-CONTEXT.md  API.md  CODE_REVIEW_2026-03-12.md  CODE_REVIEW_2026-03-14.md  CODE_REVIEW_2026-03-17.md  CODE_REVIEW_2026-03-20.md  CODE_REVIEW_2026-03-23.md  CODE_REVIEW_2026-03-25.md  CODE_REVIEW_LEAD_김민구_TASK_2026-03-20.md  CSS_RULE_COMPLIANCE.md  GEMINI-TERMINAL-rule.md  GRADLE_WRAPPER_FIX.md  HMS_INFRA_SETTING_가이드.md  PRD.md  (+20 more)
python-llm/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  chunker.py  circuit_breaker.py  config.py  embedding_service.py  import_medical_data.py  index_medical_data.py  index_rule_data.py  llm_service.py  medical_context_service.py  metrics.py  ollama_service.py  prompt_loader.py  pyproject.toml  query_expander.py  requirements-dev.txt  requirements-lock.txt  requirements.txt  reranker.py  response_cleaner.py  rule_context_service.py  run.bat  run.sh  schemas.py  typo_corrector.py  vector_store.py  vllm_service.py
python-llm/prompts/: medical_system.txt  rule_system.txt
python-llm/sql/: feedback_schema.sql  typo_dictionary.sql
python-llm/tests/: conftest.py  test_infer.py  test_medical_context.py  test_response_cleaner.py  test_schemas.py  test_typo_corrector.py
(+970 files in other folders)
